XSCOLIBRI-236: Page Printouts that contains info or warning macro show scrollbars & minor issues Fixed.
git-svn-id: https://svn.xwiki.org/svnroot/xwiki/platform/skins/trunk/colibri@31722 f329d543-caf0-0310-9063-dda96c69346f

--- a/xwiki-platform-colibri/src/main/resources/colibri/print.css
+++ b/xwiki-platform-colibri/src/main/resources/colibri/print.css
@@ -90,3 +90,8 @@
 .recentChangesMoreActions {
   display: none;
 }
+
+/* Fix XWIKI-5567 */
+.box {
+  overflow: visible;
+}
